<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.nux.dhoan9.firstmvvm.viewmodel.LoginViewModel"/>

        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="LoginViewModel"/>
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/get_menu"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#90000000"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@{viewmodel.msgError}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="@{viewmodel.msgError.length > 0 ? View.VISIBLE : View.GONE}"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_space"
                    android:layout_marginRight="@dimen/medium_space"
                    android:layout_marginTop="8dp"
                    android:theme="@style/CustomInputEditText"
                    app:validateError="@{viewmodel.emailError}">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_input_username"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        app:textChange="@{viewmodel.onEmailChange}"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_space"
                    android:layout_marginRight="@dimen/medium_space"
                    android:layout_marginTop="@dimen/small_space"
                    android:theme="@style/CustomInputEditText"
                    app:validateError="@{viewmodel.passwordError}">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_input_pwd"
                        android:inputType="textPassword"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="16sp"
                        app:textChange="@{viewmodel.onPasswordChange}"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_space"
                    android:layout_marginRight="@dimen/medium_space"
                    android:layout_marginTop="@dimen/medium_space"
                    android:text="@string/login_text_btn_login"/>

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/RegisterButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_space"
                    android:layout_marginRight="@dimen/medium_space"
                    android:layout_marginTop="@dimen/medium_space"
                    android:text="@string/login_text_btn_register"/>

                <TextView
                    android:id="@+id/tvGuest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="@dimen/medium_space"
                    android:text="@string/login_text_as_guest"
                    android:textColor="@color/register"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp">

            <include
                android:id="@+id/processingContainer"
                layout="@layout/layout_processing"/>
        </RelativeLayout>

    </RelativeLayout>
</layout>