<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.nux.dhoan9.firstmvvm.viewmodel.RegisterViewModel"/>

        <variable
            name="viewmodel"
            type="RegisterViewModel"/>
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/get_menu"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#90000000"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_space"
                    android:layout_marginRight="@dimen/medium_space"
                    android:theme="@style/CustomInputEditText"
                    app:validateError="@{viewmodel.usernameError}">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_input_username"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:textChange="@{viewmodel.onEmailChange}"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_space"
                    android:layout_marginRight="@dimen/medium_space"
                    android:layout_marginTop="@dimen/medium_space"
                    android:theme="@style/CustomInputEditText"
                    app:validateError="@{viewmodel.passwordError}">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_text_input_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:textChange="@{viewmodel.onPasswordChange}"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_space"
                    android:layout_marginRight="@dimen/medium_space"
                    android:layout_marginTop="@dimen/medium_space"
                    android:theme="@style/CustomInputEditText"
                    app:validateError="@{viewmodel.passwordConfirmError}">

                    <EditText
                        android:id="@+id/etPasswordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_text_input_confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        app:textChange="@{viewmodel.onPasswordConfirmChange}"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/PayButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="@dimen/medium_space"
                    android:layout_marginRight="@dimen/medium_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:text="@string/login_text_btn_register"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/pbLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#90000000"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>
</layout>